# sayonara-player

./: ProjectHome.md  readme.txt
branches/sayonara-515/: CMakeLists.txt  Main.cpp  application.cpp  application.h
branches/sayonara-515/CoverLookup/: CoverLookup.cpp
branches/sayonara-515/DatabaseAccess/: CDatabaseAlbums.cpp  CDatabaseArtists.cpp  CDatabaseConnector.cpp  CDatabaseConnector.h  CDatabaseLibrary.cpp  CDatabasePodcasts.cpp  CDatabaseSettings.cpp  CDatabaseStreams.cpp  CDatabaseTracks.cpp
branches/sayonara-515/GUI/: CMakeLists.txt  ContextMenu.h  MyColumnHeader.h  MyTableView.cpp  MyTableView.h  dark.css
branches/sayonara-515/HelperStructs/: CSettingsStorage.cpp  CSettingsStorage.h  CustomMimeData.h  Helper.cpp  Helper.h  MetaData.h  WebAccess.cpp  globals.h
branches/sayonara-515/PlayerPlugin/: PlayerPlugin.cpp  PlayerPlugin.h  PlayerPluginHandler.cpp  PlayerPluginHandler.h
branches/sayonara-515/playlist/: Playlist.cpp  Playlist.h
branches/sayonara-549/GUI/: CMakeLists.txt  ContextMenu.cpp  ContextMenu.h  MyColumnHeader.h  MyListView.cpp  MyTableView.cpp  standard.css
branches/sayonara-600/: CMakeLists.txt  Main.cpp
branches/sayonara-600/DatabaseAccess/: CDatabaseArtists.cpp
branches/sayonara-600/GUI/: MyTableView.cpp
branches/sayonara-600/HelperStructs/: CSettingsStorage.cpp  Helper.cpp  Helper.h  globals.h
branches/sayonara-600/languages/: sayonara_lang_de.ts  sayonara_lang_en.ts
branches/sayonara-600/linux_packages/: sayonara2debian.sh
branches/sayonara-600/playlist/: Playlist.cpp  Playlist.h
branches/sayonara-600/sayonara_client/: .project
branches/sayonara-600/scripts/: create-source.sh  header_text.sh  languages.sh  libnotify-version  setversion.sh
branches/sayonara-600/src/: CMakeLists.txt  application.cpp
branches/sayonara-626/src/: CMakeLists.txt  Main.cpp  application.cpp  application.h
branches/sayonara-962/: CMakeLists.txt
branches/sayonara-962/scripts/: languages.sh  setversion.sh
branches/sayonara-962/src/: CMakeLists.txt  Main.cpp  application.cpp  application.h
branches/sayonara-993/: CMakeLists.txt
branches/sayonara-993/scripts/: create-rpm-structure.sh  create-source.sh  setversion.sh
branches/sayonara-993/src/: CMakeLists.txt  application.cpp
trunk/: .cproject  .project  CMakeLists.txt  Gstreamer.pro  MANUAL  Main.cpp  Makefile  Makefile.bak  Phonon.pro  README.txt  Sayonara.pro  Sayonara.sln  TODO  VERSION  Win_Main.cpp  application.cpp  application.h  bugs.sayonara  createDB.sql  empty.db  fft.h  icons  moc_GUI_Equalizer.cpp  moc_GUI_TagEdit.cpp  moc_LibraryItemDelegateArtists.cpp  radio  revision  sayonara-translation.xlsx  setversion.sh  translations.ts  ui_GUI_TagEdit.h  ui_GUI_equalizer.h
trunk/CoverLookup/: CoverDownloader.h  CoverFetchThread.cpp  CoverFetchThread.h  CoverLookup.cpp  CoverLookup.h
trunk/DatabaseAccess/: CDataBasePlaylist.cpp  CDatabaseAlbums.cpp  CDatabaseArtists.cpp  CDatabaseConnector.cpp  CDatabaseConnector.h  CDatabaseGenre.cpp  CDatabaseLibrary.cpp  CDatabasePlaylist.cpp  CDatabaseSettings.cpp  CDatabaseStreams.cpp  CDatabaseTracks.cpp
trunk/Engine/: Engine.h  SoundPluginLoader.cpp
trunk/Engine/GStreamer/: CMakeLists.txt  GSTEngine.cpp  GSTEngine.h  StreamRecorder.cpp  StreamRecorder.h  StreamRipperBufferThread.cpp  StreamRipperBufferThread.h
trunk/Engine/Phonon/: CMakeLists.txt  PhononEngine.cpp
trunk/GUI/: CMakeLists.txt  ContextMenu.cpp  GUI_LastFM_Widget.ui  GUI_LibrarySetup_Widget.ui  GUI_Library_windowed.ui  GUI_Playlist.cpp  GUI_Playlist.h  GUI_Playlist.ui  GUI_Playlist_Frame.ui  GUI_Simpleplayer.cpp  GUI_Simpleplayer.h  GUI_Simpleplayer.ui  GUI_TrayIcon.cpp  GUI_TrayIcon.h  MyListView.cpp  MyListView.h  MyTableView.cpp  MyTableView.h  dark.css
trunk/GUI/InfoDialog/: GUI_InfoDialog.cpp  GUI_InfoDialog.h  GUI_InfoDialog.ui  moc_GUI_InfoDialog.cxx
trunk/GUI/LFMRadio/: GUI_LFMRadioWidget.cpp  GUI_LFMRadioWidget.h  GUI_LFMRadioWidget.ui
trunk/GUI/LanguageChooser/: GUI_LanguageChooser.cpp  GUI_LanguageChooser.h  GUI_LanguageChooser.ui
trunk/GUI/LastFM/: GUI_LFMRadioWidget.cpp  GUI_LFMRadioWidget.h  GUI_LFMRadioWidget.ui  GUI_LastFM.cpp  GUI_LastFM.h  GUI_LastFM_Dialog.ui  GUI_LastFM_Widget.ui
trunk/GUI/LyricMenuButton/: LyricMenuButton.cpp  LyricMenuButton.h
trunk/GUI/Notifications/: GUI_Notifications.cpp
trunk/GUI/Playlist/: GUI_PlaylistEntry.cpp  GUI_PlaylistEntry.h  GUI_Playlist_Entry.ui  PlaylistItemDelegate.cpp  PlaylistItemDelegate.h  PlaylistItemModel.cpp  PlaylistItemModel.h  (+2 more)
trunk/HelperStructs/: CDirectoryReader.cpp  CDirectoryReader.h  CSettingsStorage.cpp  CSettingsStorage.h  CustomMimeData.h  Equalizer_presets.h  Filter.h  Helper.cpp  Helper.h  MetaData.h  PlaylistMode.h  PlaylistParser.cpp  PlaylistParser.h  Style.cpp  Style.h  WebAccess.cpp  WebAccess.h  globals.h  id3.cpp  id3.h
trunk/LastFM/: LFMSimilarArtistsThread.cpp  LFMSimilarArtistsThread.h  LFMWebAccess.cpp  LFMWebAccess.h  LastFM.cpp  LastFM.h  LastFMAdapter.cpp  LastFMAdapter.h  lastfm_api_key
trunk/LyricLookup/: LyricLookup.cpp  LyricLookup.h  LyricServer.h
trunk/MP3_Listen/: Engine.h  GSTEngine.cpp  GSTEngine.h  MP3_Listen.cpp  MP3_Listen.h  PhononEngine.cpp  PhononEngine.h  SoundPluginLoader.cpp  SoundPluginLoader.h
trunk/Notification/: Notification.h  NotificationPluginLoader.cpp  NotificationPluginLoader.h
trunk/PlayerPlugin/: PlayerPlugin.h  PlayerPluginHandler.h
trunk/Playlist/: Playlist.cpp  Playlist.h
trunk/Socket/: Socket.cpp  Socket.h
trunk/Win_Project/: Win_Project.vcproj
trunk/languages/: sayonara_lang_de.ts  sayonara_lang_en.ts  sayonara_lang_ru.ts
trunk/linux_packages/: create_debian.sh  phonon2debian.sh  sayonara2debian.sh  sayonara2ppa.sh
trunk/playlist/: Playlist.cpp  Playlist.h  Playlist_GUI_slots.cpp
trunk/playlists/: Playlists.cpp  Playlists.h
trunk/rules/: rule_ui_file.rules
trunk/scripts/: create-revision.sh  create-rpm-structure.sh  create-source.sh  header_text.sh  languages.sh  libnotify-version  setversion.sh
trunk/src/: CMakeLists.txt  Main.cpp  PlayManager.cpp  PlayManager.h  application.cpp  application.h
(+1807 files in other folders)
