PROJECT(sayonara_libnotify)
CMAKE_MINIMUM_REQUIRED(VERSION 2.7)

include(FindPkgConfig)

SET(CMAKE_C_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS "-Woverloaded-virtual -Wall")

pkg_check_modules(PKG_LIBNOTIFY libnotify)

INCLUDE_DIRECTORIES("../..")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GOBJECT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PKG_LIBNOTIFY_INCLUDE_DIRS})

LINK_DIRECTORIES(${PKG_LIBNOTIFY_LIBRARY_DIRS})

FIND_PACKAGE(Qt4 REQUIRED)



SET(HEADERS
	../Notification.h
	LN_Notification.h 
)

SET(SOURCES
	LN_Notification.cpp
	../../HelperStructs/Helper.cpp
)
	
QT4_WRAP_CPP(HEADERS_MOC
	${HEADERS}
)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_LIBRARY(sayonara_libnotify SHARED ${SOURCES} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(sayonara_libnotify ${QT_LIBRARIES})

SET(CMAKE_INSTALL_PREFIX "/usr")
INSTALL(TARGETS sayonara_libnotify DESTINATION lib/sayonara)

